# coretrace-ci-consumer-demo

./: CMakeLists.txt  README.md
.github/workflows/: coretrace-analysis-action-tag.yml  coretrace-analysis.yml
include/: utils.h
src/: main.c  utils.c
